# TinyFS

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  run_test.lua  runtest.py  setup.py
lib/: macros.h  paths.h
lib/datastructures/: hashtable.c  hashtable.h  list.c  list.h
lib/hashing/: closedhashing.h  openhashing.h
lib/logging/: logging.c  logging.h  logginglevels.h
src/: main.c
src/types/: tree.h
src/utils/: command.h  general.h
src/utils/hashing/: functions.c  functions.h
